--- a/TIN-klient/ekranlogowania.ui
+++ b/TIN-klient/ekranlogowania.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Super TIN-TIN</string>
+   <string>Logowanie ST-T</string>
   </property>
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
